@@ -19,49 +19,44 @@ package com.hedera.services.bdd.spec;
 import static com.hedera.services.bdd.spec.HapiPropertySource.asAccount;
 import static com.hedera.services.bdd.spec.HapiPropertySource.asSources;
 import static com.hedera.services.bdd.spec.HapiPropertySource.inPriorityOrder;
-import static com.hedera.services.bdd.spec.HapiSpec.CostSnapshotMode;
 import static com.hedera.services.bdd.spec.keys.KeyFactory.KeyType;
+import static com.hedera.services.bdd.spec.keys.deterministic.Bip0032.mnemonicToEd25519Key;
 import static com.hedera.services.bdd.spec.transactions.TxnUtils.bytecodePath;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toSet;
 
+import com.hedera.node.app.hapi.utils.CommonPbjConverters;
+import com.hedera.node.app.hapi.utils.keys.Ed25519Utils;
 import com.hedera.services.bdd.spec.keys.SigControl;
+import com.hedera.services.bdd.spec.keys.deterministic.Bip0032;
 import com.hedera.services.bdd.spec.props.JutilPropertySource;
 import com.hedera.services.bdd.spec.props.MapPropertySource;
 import com.hedera.services.bdd.spec.props.NodeConnectInfo;
 import com.hedera.services.bdd.spec.transactions.HapiTxnOp;
-import com.hedera.services.bdd.spec.utilops.records.AutoSnapshotRecordSource;
 import com.hederahashgraph.api.proto.java.*;
-import java.security.SecureRandom;
+import edu.umd.cs.findbugs.annotations.NonNull;
 import java.util.*;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import net.i2p.crypto.eddsa.EdDSAPrivateKey;
 import org.apache.commons.lang3.StringUtils;
 
+/**
+ * Aggregates the properties to be used in setting up a {@link HapiSpec}.
+ */
 public class HapiSpecSetup {
-    private final SecureRandom r = new SecureRandom();
-
-    private static final HapiPropertySource defaultNodeProps;
-
-    static {
-        defaultNodeProps = new JutilPropertySource("bootstrap.properties");
-    }
-
-    public static HapiPropertySource getDefaultNodeProps() {
-        return defaultNodeProps;
-    }
+    private final SplittableRandom r = new SplittableRandom(1_234_567L);
 
     private Set<ResponseCodeEnum> streamlinedIngestChecks = null;
     private HapiPropertySource ciPropertiesMap = null;
     private static HapiPropertySource DEFAULT_PROPERTY_SOURCE = null;
     private static final HapiPropertySource BASE_DEFAULT_PROPERTY_SOURCE = JutilPropertySource.getDefaultInstance();
 
-    public static final HapiPropertySource getDefaultPropertySource() {
+    public static HapiPropertySource getDefaultPropertySource() {
         if (DEFAULT_PROPERTY_SOURCE == null) {
             String globals = System.getProperty("global.property.overrides");
             globals = (globals == null) ? "" : globals;
-            String[] sources = globals.length() > 0 ? globals.split(",") : new String[0];
+            String[] sources = !globals.isEmpty() ? globals.split(",") : new String[0];
             DEFAULT_PROPERTY_SOURCE =
                     inPriorityOrder(asSources(Stream.of(Stream.of(sources), Stream.of(BASE_DEFAULT_PROPERTY_SOURCE))
                             .flatMap(Function.identity())
@@ -81,6 +76,10 @@ public class HapiSpecSetup {
     }
 
     private HapiPropertySource props;
+
+    public static HapiSpecSetup setupFrom(Object... objs) {
+        return new HapiSpecSetup(inPriorityOrder(asSources(objs)));
+    }
 
     public enum NodeSelection {
         FIXED,
@@ -104,17 +103,31 @@ public class HapiSpecSetup {
     }
 
     /**
+     * Returns the Ed25519 private key for the default payer in this spec setup.
+     *
+     * @return the Ed25519 private key for the default payer in this spec setup
+     */
+    public EdDSAPrivateKey payerKey() {
+        if (StringUtils.isNotEmpty(defaultPayerKey())) {
+            return Ed25519Utils.keyFrom(com.swirlds.common.utility.CommonUtils.unhex(defaultPayerKey()));
+        } else if (StringUtils.isNotEmpty(defaultPayerMnemonic())) {
+            return mnemonicToEd25519Key(defaultPayerMnemonic());
+        } else if (StringUtils.isNotEmpty(defaultPayerMnemonicFile())) {
+            final var mnemonic = Bip0032.mnemonicFromFile(defaultPayerMnemonicFile());
+            return mnemonicToEd25519Key(mnemonic);
+        } else {
+            return Ed25519Utils.readKeyFrom(defaultPayerPemKeyLoc(), defaultPayerPemKeyPassphrase());
+        }
+    }
+
+    /**
      * Add new properties that would merge with existing ones, if a property already exist then
      * override it with new value
      *
      * @param props A map of new properties
      */
-    public void addOverrides(final Map<String, Object> props) {
+    public void addOverrides(@NonNull final Map<String, String> props) {
         this.props = HapiPropertySource.inPriorityOrder(new MapPropertySource(props), this.props);
-    }
-
-    public String defaultRecordLoc() {
-        return props.get("recordStream.path");
     }
 
     public FileID addressBookId() {
@@ -147,30 +160,6 @@ public class HapiSpecSetup {
 
     public String appPropertiesFile() {
         return props.get("app.properties.name");
-    }
-
-    public Boolean clientFeeScheduleFromDisk() {
-        return props.getBoolean("client.feeSchedule.fromDisk");
-    }
-
-    public String clientFeeSchedulePath() {
-        return props.get("client.feeSchedule.path");
-    }
-
-    public Boolean clientExchangeRatesFromDisk() {
-        return props.getBoolean("client.exchangeRates.fromDisk");
-    }
-
-    public String clientExchangeRatesPath() {
-        return props.get("client.exchangeRates.path");
-    }
-
-    public String costSnapshotDir() {
-        return props.get("cost.snapshot.dir");
-    }
-
-    public CostSnapshotMode costSnapshotMode() {
-        return props.getCostSnapshotMode("cost.snapshot.mode");
     }
 
     public HapiPropertySource ciPropertiesMap() {
@@ -289,20 +278,28 @@ public class HapiSpecSetup {
         return props.getAccount("default.payer");
     }
 
+    public ServiceEndpoint defaultGossipEndpointInternal() {
+        return CommonPbjConverters.fromPbj(props.getServiceEndpoint("default.gossipEndpoint.internal"));
+    }
+
+    public ServiceEndpoint defaultGossipEndpointExternal() {
+        return CommonPbjConverters.fromPbj(props.getServiceEndpoint("default.gossipEndpoint.external"));
+    }
+
+    public ServiceEndpoint defaultServiceEndpoint() {
+        return CommonPbjConverters.fromPbj(props.getServiceEndpoint("default.serviceEndpoint"));
+    }
+
+    public byte[] defaultGossipCaCertificate() {
+        return props.getBytes("default.gossipCaCertificate");
+    }
+
     public String defaultPayerKey() {
         return props.get("default.payer.key");
     }
 
     public String defaultPayerName() {
         return props.get("default.payer.name");
-    }
-
-    public AccountID defaultProxy() {
-        return props.getAccount("default.proxy");
-    }
-
-    public long defaultQueueSaturationMs() {
-        return props.getLong("default.queueSaturation.ms");
     }
 
     public RealmID defaultRealm() {
@@ -328,26 +325,6 @@ public class HapiSpecSetup {
         return props.getBoolean("recordStream.overrideExistingSnapshot");
     }
 
-    /**
-     * Returns the record stream source for the {@link HapiSpec} to use when automatically taking snapshots
-     * with {@code recordStream.autoSnapshotManagement=true}.
-     *
-     * @return the record stream source for the {@link HapiSpec} to use when automatically taking snapshots
-     */
-    public AutoSnapshotRecordSource autoSnapshotTarget() {
-        return props.getAutoSnapshotRecordSource("recordStream.autoSnapshotTarget");
-    }
-
-    /**
-     * Returns the record stream source for the {@link HapiSpec} to use when automatically matching snapshots
-     * with {@code recordStream.autoMatchTarget=true}.
-     *
-     * @return the record stream source for the {@link HapiSpec} to use when automatically matching snapshots
-     */
-    public AutoSnapshotRecordSource autoMatchTarget() {
-        return props.getAutoSnapshotRecordSource("recordStream.autoMatchTarget");
-    }
-
     public boolean defaultReceiverSigRequired() {
         return props.getBoolean("default.receiverSigRequired");
     }
@@ -362,22 +339,6 @@ public class HapiSpecSetup {
 
     public int defaultThresholdN() {
         return props.getInteger("default.thresholdKey.N");
-    }
-
-    public long defaultThroughputObsExpiryMs() {
-        return props.getLong("default.throughputObs.expiry.ms");
-    }
-
-    public long defaultThroughputObsSleepMs() {
-        return props.getLong("default.throughputObs.sleep.ms");
-    }
-
-    public String defaultTokenSymbol() {
-        return props.get("default.token.symbol");
-    }
-
-    public String defaultTokenName() {
-        return props.get("default.token.name");
     }
 
     public long defaultTokenInitialSupply() {
@@ -420,7 +381,7 @@ public class HapiSpecSetup {
         return props.get("exchange.rates.controlAccount.name");
     }
 
-    public HapiSpec.SpecStatus expectedFinalStatus() {
+    final HapiSpec.SpecStatus expectedFinalStatus() {
         return props.getSpecStatus("expected.final.status");
     }
 
@@ -448,7 +409,7 @@ public class HapiSpecSetup {
         return props.getInteger("fees.tokenTransferUsageMultiplier");
     }
 
-    public Boolean useFixedFee() {
+    public boolean useFixedFee() {
         return props.getBoolean("fees.useFixedOffer");
     }
 
@@ -504,10 +465,6 @@ public class HapiSpecSetup {
         return props.get("invalid.contract.name");
     }
 
-    public Boolean measureConsensusLatency() {
-        return props.getBoolean("measure.consensus.latency");
-    }
-
     public Boolean suppressUnrecoverableNetworkFailures() {
         return props.getBoolean("warnings.suppressUnrecoverableNetworkFailures");
     }
@@ -524,7 +481,7 @@ public class HapiSpecSetup {
         NodeConnectInfo.NEXT_DEFAULT_ACCOUNT_NUM = 3;
         return Stream.of(props.get("nodes").split(","))
                 .map(NodeConnectInfo::new)
-                .collect(toList());
+                .toList();
     }
 
     public NodeSelection nodeSelector() {
@@ -533,18 +490,6 @@ public class HapiSpecSetup {
 
     public Integer numOpFinisherThreads() {
         return props.getInteger("num.opFinisher.threads");
-    }
-
-    public String persistentEntitiesDir() {
-        return props.get("persistentEntities.dir.path");
-    }
-
-    public boolean requiresPersistentEntities() {
-        return StringUtils.isNotEmpty(persistentEntitiesDir());
-    }
-
-    public boolean updateManifestsForCreatedPersistentEntities() {
-        return props.getBoolean("persistentEntities.updateCreatedManifests");
     }
 
     public Integer port() {
@@ -656,22 +601,6 @@ public class HapiSpecSetup {
 
     public String systemUndeleteAdminName() {
         return props.get("systemUndeleteAdmin.name");
-    }
-
-    /**
-     * Stream the set of HAPI operations that should be submitted to workflow port 60211/60212.
-     * This code is needed to test each operation through the new workflow code.
-     *
-     * @return set of hapi operations
-     */
-    public Set<HederaFunctionality> workflowOperations() {
-        final var workflowOps = props.get("client.workflow.operations");
-        if (workflowOps.isEmpty()) {
-            return Collections.emptySet();
-        }
-        return Stream.of(workflowOps.split(","))
-                .map(HederaFunctionality::valueOf)
-                .collect(toSet());
     }
 
     /**
